# multi-agent-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.todo  LICENSE  README.md  docker-compose.yml  pyproject.toml
agent-ui/: .dockerignore  .env.local.example  Dockerfile  package-lock.json
agent-ui/src/: store.ts
agent-ui/src/components/chat/Sidebar/: AuthToken.tsx  Sidebar.tsx
data/: sample_queries.json
docs/: DOCKER_SETUP.md  LOCAL_SETUP.md  MANUAL_API_TEST.md  NGROK.md  TESTING.md  UI_SETUP.md
src/: config.py  log_config.py  main.py
src/agents/: orchestrator.py  rag_agent.py  tool_agent.py
src/auth/: routes.py
src/knowledge/: loader.py
src/prompts/: prompts.py
src/routes/: chat.py  todo.py  weather.py
src/tools/: todo_mcp_server.py  weather.py
tests/: conftest.py  e2e_test.py  test_auth.py  test_chat.py  test_todo.py  test_weather.py
